Update some paths and Fix PDF